Fix line breaks in Firefox

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -26,3 +26,7 @@
 .VPDoc.has-aside .content-container {
     max-width: unset !important;
 }
+.vp-doc .el-table .cell {
+    /* Fix line breaks in Firefox */
+    word-break: break-all;
+}
